apicurio/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apicurio
  labels:
    istio-injection: enabled
