apicurio/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio-db
  namespace: apicurio
  labels:
    app: apicurio-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: apicurio-db
