apicurio/manifests/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio-registry
  namespace: apicurio
  labels:
    app: apicurio-registry
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: apicurio-registry
