apicurio/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apicurio-vs
  namespace: apicurio
spec:
  hosts:
  - "apicurio.tp.lan"
  - "apicurio.gmk.lan"
  exportTo:
  - "."
  - istio-ingress
  - istio-system
  gateways:
  - istio-ingress/apicurio-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apicurio-registry
        port:
          number: 8080
